feat(vets): Configure docker image build